--- a/NOKAPP/pom.xml
+++ b/NOKAPP/pom.xml
@@ -44,7 +44,12 @@
     <version>2.4.1</version>
 </dependency>
 
-
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 			
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -54,11 +59,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>5.4.1.Final</version>
+    </dependency>
 		<dependency>
     <groupId>mysql</groupId>
     <artifactId>mysql-connector-java</artifactId>
-    <version>5.1.39</version>
+    <scope>runtime</scope>
 </dependency>
 	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
 <dependency>
