--- a/NOKAPP/src/main/resources/application.properties
+++ b/NOKAPP/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #ici f datasource.url tu vas copier  jdbc:mysql://localhost:3306/et ici tu vas creer Une base f SQL
-spring.datasource.url=jdbc:mysql://localhost:3306/emsi-data
+spring.datasource.url=jdbc:mysql://localhost:3306/emsi-data?serverTimezone=UTC
 spring.datasource.username=Naoufal
 spring.datasource.password=P@ssw0rd
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
